[project]
name = "steer-bench"
version = "0.1.0"
description = "Benchmark sparse autoencoder steers."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lm-eval>=0.4.0",
    "tabulate>=0.9.0",
    "openai>=1.0.0",
    "goodfire",
    "python-dotenv>=1.0.0",
    "lm-eval[api]>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"